import CardManager from './../CardGroupManager';


export default class Graveyard extends CardManager {
    constructor() {
        super();

    }
}
